--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,10 +18,12 @@ requirements:
     - pip
     - python >=3.6
     - poetry-core >=1,<2
+    - setuptools >=59,<70
+    - wheel
   run:
     - python >=3.6
     - graphql-core >=3.2,<3.3
-    - typing_extensions >=4.1,<5
+    - typing_extensions >=4.1,<5  # [py<38]
 
 test:
   source_files:
