--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,9 +31,9 @@ test:
   requires:
     - pip
     - pytest >=6.2,<7
-    - pytest-asyncio >=0.14,<1
-    - pytest-cov >=2.11,<3
-    - pytest-describe >=1,<2
+    - pytest-asyncio >=0.18,<1
+    - pytest-cov >=3.0
+    - pytest-describe >=2.0
     - pyyaml >=5.4,<6
   imports:
     - graphql_relay
