--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
 
 build:
   number: 0
-  script: {{ PYTHON }} -m pip install -vv .
+  script: {{ PYTHON }} -m pip install -vv . --no-deps --no-build-isolation
   skip: True  # [py<36]
 
 requirements:
@@ -34,7 +34,6 @@ test:
     - pytest-asyncio >=0.18,<1
     - pytest-cov >=3.0
     - pytest-describe >=2.0
-    - pyyaml >=5.4,<6
   imports:
     - graphql_relay
   commands:
