--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,17 +23,17 @@ requirements:
   run:
     - python
     - graphql-core >=3.2,<3.3
-    - typing_extensions >=4.1  # [py<38]
+    - typing_extensions >=4.1,<5  # [py<38]
 
 test:
   source_files:
     - tests
   requires:
     - pip
-    - pytest >=6.2
+    - pytest >=6.2,<7
     - pytest-asyncio >=0.18,<1
-    - pytest-cov >=3.0
-    - pytest-describe >=2.0
+    - pytest-cov >=3.0,<4.0
+    - pytest-describe >=2.0,<3.0
   imports:
     - graphql_relay
   commands:
