--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,7 +41,7 @@ test:
     - pytest --cov graphql_relay --no-cov-on-fail --cov-report term-missing:skip-covered --cov-fail-under 91
 
 about:
-  home: https://github.com/theacodes/cmarkgfm
+  home: https://github.com/graphql-python/graphql-relay-py
   license_file: LICENSE
   license: MIT
   license_family: MIT
